tests/remap/fail/args.0/test.ngc
M400 P47.11 Q8.15
M2
